'修改目录结构'

--- a/templates/show.html
+++ b/templates/show.html
@@ -4,16 +4,17 @@
             <div class="container-fluid tm-section tm-section-2">
             <div class="row tm-media-row">
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                                    {{ mypie|safe }}
 
-                    <img src="/static/img/tm-img-320x320-1.jpg" alt="Image" class="img-fluid img-circle img-thumbnail tm-media-img">
+{#                    <img src="/static/img/tm-img-320x320-1.jpg" alt="Image" class="img-fluid img-circle img-thumbnail tm-media-img">#}
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-                    <div class="tm-media-text-container">
-                        <h3 class="tm-media-title tm-gray-text">Interdum et malesuada fames</h3>
-                        <p class="tm-media-description tm-gray-text-2">Aliquam dapibus felis fringilla ligula mittis, ut congue purus gravida. Suspendisse suscipit tellus id odio mollis, id tincidunt metus gravida. Ut at arcu in elit maximus eleifend.</p>
-                    </div>
+{#                    <div class="tm-media-text-container">#}
+{#                        <h3 class="tm-media-title tm-gray-text">Interdum et malesuada fames</h3>#}
+{#                        <p class="tm-media-description tm-gray-text-2">Aliquam dapibus felis fringilla ligula mittis, ut congue purus gravida. Suspendisse suscipit tellus id odio mollis, id tincidunt metus gravida. Ut at arcu in elit maximus eleifend.</p>#}
+{#                    </div>#}
+
                 </div>
-                {{ mypie|safe }}
 
             </div>
 
