'删除注释代码'

--- a/templates/reslut.html
+++ b/templates/reslut.html
@@ -17,19 +17,20 @@
 
                         <div class="gl-i-wrap">
                             <div class="p-img">
-                                <a target="_blank" title="【品质特惠】抢购价2499！压感屏幕指纹，双频GPS精准定位，支持红外人脸识别！小米爆品特惠，选品质，购小米！"
-                                   href="//item.jd.com/100000400014.html">
+                                <a target="_blank" title=""
+                                   href="{% url 'search' %}">
                                     <img width="220" height="220" class="" data-img="1" source-data-lazy-img="" data-lazy-img="done"
                                          src="//img14.360buyimg.com/n7/jfs/t1/4398/28/6190/281470/5ba1ee9bE38ae264d/19f155adacf55419.jpg">
-                    </a>			<div data-lease="" data-catid="655" data-venid="1000004123" data-presale="" data-done="1"></div>
+                    </a>
                             </div>
 
                             <div class="p-price">
                     <strong class="J_100000400010" data-done="1"><em>￥</em><i>2899.00</i></strong>		</div>
                             <div class="p-name p-name-type-2">
-                                <a target="_blank" title="【品质特惠】抢购价2499！压感屏幕指纹，双频GPS精准定位，支持红外人脸识别！小米爆品特惠，选品质，购小米！" href="//item.jd.com/100000400014.html" onclick="searchlog(1,100000400010,0,1,'','flagsClk=1363153544')">
-                                    <em><font class="skcolor_ljg">小米8</font>屏幕指纹版 6GB+128GB 黑色 全网通4G 双卡双待 全面屏拍照游戏智能手机</em>
-                                    <i class="promo-words" id="J_AD_100000400010">【品质特惠】抢购价2499！压感屏幕指纹，双频GPS精准定位，支持红外人脸识别！小米爆品特惠，选品质，购小米！</i>
+                                <a target="_blank" title="" href="{% url 'search' %}">
+                                    <em>小米8屏幕指纹版 6GB+128GB 黑色 全网通4G 双卡双待 全面屏拍照游戏智能手机</em>
+                                    <i class="promo-words" id="J_AD_100000400010">
+                                        【品质特惠】抢购价2499！压感屏幕指纹，双频GPS精准定位，支持红外人脸识别！小米爆品特惠，选品质，购小米！</i>
                                 </a>
                             </div>
                         </div>
