'完成前端页面展示'

--- a/templates/reslut.html
+++ b/templates/reslut.html
@@ -5,8 +5,10 @@
             <div class="container-fluid tm-section-3-inner">
                 <div class="row center-block text-xs-center tm-section-3-header">
                     <div class="col-xs-12">
-                        <h2 class="tm-text-white tm-section-3-title">Choose your plan</h2>
-                        <p class="tm-text-white tm-section-3-description">Curabitur porta scelerisque justo, ut ultrices lacus auctor eget. Proin volutpat eu mi nec consequat. Integer porta tristique quam.</p>
+                        <h2 class="tm-text-white tm-section-3-title">搜索结果：</h2>
+{#                        <p class="tm-text-white tm-section-3-description">#}
+{#                            Curabitur porta scelerisque justo, ut ultrices lacus auctor eget. #}
+{#                            Proin volutpat eu mi nec consequat. Integer porta tristique quam.</p>#}
                     </div>
                 </div>
                 <div class="row">
