'简化数据库结构'

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
                 <li class="selected">
                     <div class="cd-full-width">
                         <div class="tm-slide-content-div">
-                            <form action="{% url 'search' %}" id="search-form">
+                            <form action="{% url 'taobao:search' %}" id="search-form">
                                 <i class="fa fa-cogs tm-slide-icon"></i>
                                 <h2 class="text-uppercase">Strategy</h2>
                                 <p class="m-b-mid">Search your want to check product</p>
