--- a/templates/show2.html
+++ b/templates/show2.html
@@ -111,153 +111,104 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="col-md-4 charts-grids widget">
 						<h4 class="title">评论情况</h4>
-						<div id="main" style= "height:300px; width:400px;"> </div>
+						<div id="firstPieChart" style= "height:300px; width:400px;"> </div>
 					</div>
 					<div class="clearfix"> </div>
+                    <p hidden id="jdproductid">77</p>
+                    <p hidden id="taobaoproductid">{{ taobaoproductid }}</p>
 							 <script>
-                                 var taobaonamelist = [];
-                                 var taobaovalueslist = -[];
-                                 datajson = [];
-                                         window.onload = function () {
-                                                $.ajax({
-                                                    type: "get",
-                                                    url : 'http://127.0.0.1:8080/api/TaobaoTag/?format=json',
-                                                    {#dateType: "json",#}
-                                                    success:function (responseData) {
-                                                        var data = responseData;
-                                                        for (var i= 0;i<data.results.length; i++){
-                                                            taobaonamelist.push(data['results'][i]['tagname']);
-                                                            taobaonamelist.push(data['results'][i]['tagcount']);
-                                                        }
-                                                        console.log(taobaonamelist);
-                                                        for(var i=0; i<taobaonamelist.length;i++){
-                                                        var json = {};
-                                                            for (var j =0; j<taobaovalueslist.length;j++){
-                                                                if(i==j){
-                                                                    json.value = taobaovalueslist[j];
-                                                                    json.name = taobaonamelist[i];
-                                                                    datajson.push(json)
-                                                                }
-                                                            }
-                                                        }
-                                                    },
-                                                    },
-                                                    console.log(datajson),
-                                                    console.log(taobaovalueslist),
-                                                    console.log(taobaonamelist),
-                                                )
-                                            };
-								var barChartData = {
-									labels : ["Jan","Feb","March","April","May","June","July"],
-									datasets : [
-										{
-											fillColor : "rgba(233, 78, 2, 0.9)",
-											strokeColor : "rgba(233, 78, 2, 0.9)",
-											highlightFill: "#e94e02",
-											highlightStroke: "#e94e02",
-											data : [65,59,90,81,56,55,40]
-										},
-										{
-											fillColor : "rgba(79, 82, 186, 0.9)",
-											strokeColor : "rgba(79, 82, 186, 0.9)",
-											highlightFill: "#4F52BA",
-											highlightStroke: "#4F52BA",
-											data : [40,70,55,20,45,70,60]
-										}
-									]
-									
-								};
-								var lineChartData = {
-									labels : ["Jan","Feb","March","April","May","June","July"],
-									datasets : [
-										{
-											fillColor : "rgba(242, 179, 63, 1)",
-											strokeColor : "#F2B33F",
-											pointColor : "rgba(242, 179, 63, 1)",
-											pointStrokeColor : "#fff",
-											data : [70,60,72,61,75,59,80]
-
-										},
-										{
-											fillColor : "rgba(97, 100, 193, 1)",
-											strokeColor : "#6164C1",
-											pointColor : "rgba(97, 100, 193,1)",
-											pointStrokeColor : "#9358ac",
-											data : [50,65,51,67,52,64,50]
-
-										}
-									]
-									
-								};
-                                var myChart = echarts.init(document.getElementById('main'));
-
-                                // 指定图表的配置项和数据
-                                var option = {
-                                        title : {
-                                            text: '某站点用户访问来源',
-                                            {#subtext: '纯属虚构',#}
-                                            x:'center'
-                                        },
-                                        tooltip : {
-                                            trigger: 'item',
-                                            formatter: "{a} <br/>{b} : {c} ({d}%)"
-                                        },
-                                        legend: {
-                                            orient: 'vertical',
-                                            left: 'left',
-                                            {#data: ['直接访问','邮件营销','联盟广告','视频广告','搜索引擎'],#}
-                                            {#data: ['awda', 'awsdwad'],#}
-                                            data: taobaonamelist,
-                                        },
-                                        series : [
-                                            {
-                                                name: '京东',
-                                                type: 'pie',
-                                                radius : '55%',
-                                                center: ['50%', '60%'],
-                                                data:datajson,
-                                                itemStyle: {
-                                                    emphasis: {
-                                                        shadowBlur: 10,
-                                                        shadowOffsetX: 0,
-                                                        shadowColor: 'rgba(0, 0, 0, 0.5)'
-                                                    }
-                                                }
-                                            }
-                                        ]
-                                    };
-
-
-                                // 使用刚指定的配置项和数据显示图表。
-                                myChart.setOption(option);
-								{#var pieData = [#}
-								{#		{#}
-								{#			value: 90,#}
-								{#			color:"rgba(233, 78, 2, 1)",#}
-								{#			label: "Product 1"#}
-								{#		},#}
-								{#		{#}
-								{#			value : 50,#}
-								{#			color : "rgba(242, 179, 63, 1)",#}
-								{#			label: "Product 2"#}
-								{#		},#}
-								{#		{#}
-								{#			value : 60,#}
-								{#			color : "rgba(88, 88, 88,1)",#}
-								{#			label: "Product 3"#}
-								{#		},#}
-								{#		{#}
-								{#			value : 40,#}
-								{#			color : "rgba(79, 82, 186, 1)",#}
-								{#			label: "Product 4"#}
-								{#		}#}
-								{#		#}
-								{#	];#}
-								
-							new Chart(document.getElementById("line").getContext("2d")).Line(lineChartData);
-							new Chart(document.getElementById("bar").getContext("2d")).Bar(barChartData);
-							{#new Chart(document.getElementById("pie").getContext("2d")).Pie(pieData);#}
-							
+                                 window.onload = function () {
+    var myChart = echarts.init(document.getElementById('firstPieChart'));
+    // 显示标题，图例和空的坐标轴
+    myChart.setOption({
+        color: ['#ff7d27', '#47b73d', '#fcc36e', '#57a2fd', "#228b22"],//饼图颜色
+        title: {
+            text: '信息发布排行',
+            subtext: '纯属虚构',
+            x:'center'
+        },
+        tooltip: {
+            trigger: 'item',
+            formatter: "{a} <br/>{b} : {c} ({d}%)"
+        },        
+        legend: {
+            orient: 'vertical',
+            x: 'left',
+            data: []
+        },        
+        toolbox: {
+            show: true,
+            feature: {
+                mark: { show: true },
+                dataView: { show: true, readOnly: false },
+                magicType: {
+                    show: true,
+                    type: ['pie', 'funnel'],
+                    option: {
+                        funnel: {
+                            x: '25%',
+                            width: '50%',
+                            funnelAlign: 'left',
+                            max: 1548
+                        }
+                    }
+                },
+                restore: { show: true },
+                saveAsImage: { show: true }
+            }
+        },         
+        series: [{
+            name: '发布排行',
+            type: 'pie',
+            radius: '55%',
+            center: ['50%', '60%'],            
+            data: []
+        }]        
+    });
+    myChart.showLoading();    //数据加载完之前先显示一段简单的loading动画
+    var taobaonamelist = [];    //类别数组（用于存放饼图的类别）
+    var taobaovalueslist = [];
+    var datajson = [];
+    $.ajax({
+        type: 'get',
+        url: 'http://127.0.0.1:8080/api/TaobaoTag/?format=json',//请求数据的地址
+        dataType: "json",        //返回数据形式为json
+        success: function (result) {
+            //请求成功时执行该函数内容，result即为服务器返回的json对象
+            var data = result;
+            for (var i= 0;i<data.results.length; i++){
+                taobaonamelist.push(data['results'][i]['tagname']);
+                taobaovalueslist.push(data['results'][i]['tagcount']);
+            }
+            {#console.log(taobaonamelist);#}
+            for(var i=0; i<taobaonamelist.length;i++){
+            var json = {};
+                for (var j =0; j<taobaovalueslist.length;j++){
+                    if(i==j){
+                        json.value = taobaovalueslist[j][0];
+                        json.name = taobaonamelist[i];
+                        datajson.push(json)
+                    }
+                }
+            }
+            myChart.hideLoading();    //隐藏加载动画
+            myChart.setOption({        //加载数据图表                
+                legend: {                    
+                    data: taobaonamelist
+                },
+                series: [{                    
+                    data: datajson
+                }]
+            });
+        },
+        error: function (errorMsg) {
+            //请求失败时执行该函数
+            alert("图表请求数据失败!");
+            myChart.hideLoading();
+        }
+    });
+};
+loadOneColumn();
 							</script>
 							
 				</div>
