--- a/templates/search_reslut.html
+++ b/templates/search_reslut.html
@@ -1,28 +1,51 @@
 {% extends 'elements.html' %}
 
 {% block content %}
-<div class="bjlineSmall singlebj bj_1570533847" skuid="100000543186" hj="0" v="{&quot;bjid&quot;:1570533847,&quot;sitename&quot;:&quot;京东商城&quot;,&quot;price&quot;:&quot;2798.00&quot;}">
-  <div class="pic"><a class="shenqingGY" href="http://www.manmanbuy.com/redirectUrl.aspx?bjid=1570533847&amp;y=search" target="_blank"><img onerror="this.src='http://misc.manmanbuy.com/images/none.gif'" src="http://img11.360buyimg.com/n7/jfs/t1/2142/32/8585/202211/5ba9b127E71cbec4f/3b959b4c0941ddf9.jpg"></a></div>
+    {% for product in jdlist %}
+{#    {% for k, v in product.items %}#}
+<div class="bjlineSmall singlebj bj_1570533847" >
+  <div class="pic"><a class="shenqingGY" href="{{ product.url }}" target="_blank">
+      <img src="{{ product.imgurl }}"></a></div>
   <div class="title">
-    <div class="t"><a class="shenqingGY" href="http://www.manmanbuy.com/redirectUrl.aspx?bjid=1570533847&amp;y=search" target="_blank"><font class="spnamehighword">魅族</font> <font class="spnamehighword">16</font>th 全面屏手机 6GB+64GB 极光蓝 全网通移动联通电信4G手机 双卡双待</a> <span> <span class="priceyouhui"></span></span></div>
-<div class="addfav"><a v="favPrice&amp;bjid=1570533847" class="iframefav" href="#iframemain"><i></i>收藏&amp;降价通知</a></div>
+    <div class="t"><a class="shenqingGY" href="{{ product.url }}" target="_blank">
+        <font class="spnamehighword">{{ keyword }}</font>{{ product.desc }}</a> <span> <span class="priceyouhui"></span></span></div>
 
   </div>
   <div class="cost">
-    <div class="p AreaPrice outprice"><em>¥</em><span class="listpricespan">2798 <font class="pricedanjia"></font></span><span class="poptrend"><a href="http://p.zwjhl.com/price.aspx?url=http%3a%2f%2fitem.jd.com%2f100000543186.html&amp;bjid=1570533847&amp;ack=history" thref="http://p.zwjhl.com/price.aspx?url=http%3a%2f%2fitem.jd.com%2f100000543186.html&amp;bjid=1570533847&amp;ack=history" v="1570533847" target="_blank"><img width="16px" height="14px" src="http://misc.manmanbuy.com/images/trendx2.png" border="0" alt="点击查看该商品的走势图"></a></span></div><div class="stock outstock">荔湾区无货</div>
+      <div class="p AreaPrice outprice"><em>¥</em><span class="listpricespan">{{ product.price }}</span></div>
    <font class="pricedanjia"></font><div class="mobprice"></div>
-   <div class="wxprice"></div>
-   <div class="youhuiinfo"></div>
    <div style="width:120px"><span style="color:#FF5600;"></span></div>
   </div>
   <div class="comment">&nbsp; </div>
   <div class="mall">
-    <p class="m"><img src="http://sf.manmanbuy.com/images/sitelogo/1.png" align="absmiddle" alt="京东商城的报价"> <span class="shenqingGY">京东商城</span></p>
-    <p class="AreaZY">自营</p>
-    <p class="t">1天前</p>
+    <p class="m"><img src="https://misc.360buyimg.com/jdf/1.0.0/unit/global-header/1.0.0/i/jdlogo-201708-@1x.png" align="absmiddle" alt="京东商城的报价"> <span class="shenqingGY">京东商城</span></p>
   </div>
   <div class="clear"></div>
 </div>
+{#        {% endfor %}#}
+    {% endfor %}
+    {% for suning in suninglist %}
+<div class="bjlineSmall singlebj bj_1570533847" >
+  <div class="pic"><a class="shenqingGY" href="{{ suning.url }}" target="_blank">
+      <img src="{{ suning.imgurl }}"></a></div>
+  <div class="title">
+    <div class="t"><a class="shenqingGY" href="{{ suning.url }}" target="_blank">
+        <font class="spnamehighword">{{ keyword }}</font>{{ suning.desc }}</a> <span> <span class="priceyouhui"></span></span></div>
+
+  </div>
+  <div class="cost">
+      <div class="p AreaPrice outprice"><em>¥</em><span class="listpricespan">价钱在图</span></div>
+   <font class="pricedanjia"></font><div class="mobprice"></div>
+   <div style="width:120px"><span style="color:#FF5600;"></span></div>
+  </div>
+  <div class="comment">&nbsp; </div>
+  <div class="mall">
+    <p class="m"><img src="https://image3.suning.cn/uimg/cms/img/153135831598566332.png" align="absmiddle"> <span class="shenqingGY">苏宁易购</span></p>
+  </div>
+  <div class="clear"></div>
+</div>
+{#        {% endfor %}#}
+    {% endfor %}
 <style type="text/css">
     .bjlineSmall{width: 990px;padding: 12px 0px;border-bottom:1px solid #eeeeee; position:relative;}
 .bjlineSmall .clear{ height:0px; font-size:0px;overflow:hidden; clear:both;}
